data/all_generated_tests/raw_wast_tests/br_InfiniteLoops_507.wast
;; 8. **Test Description:**    - Create a scenario where a loop with a `br` instruction is misconfigured to loop back to the same label without proper operand stack handling.    - **Constraint Checking:** Validates if the `br` implementation handles operand stack management when branching back to a loop start.    - **Relation to Infinite Loops:** Improper operand stack handling can cause the loop to continuously restart without reaching an exit condition.

(assert_invalid
  (module (func (loop (i32.const 1) (br 0))))
  "type mismatch"
)